# task-manager-api

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3c70dfb624e3_add_task_and_category_models.py  66f755fda2b7_add_attachments_table.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  categories.py  tasks.py
app/core/: config.py  exceptions.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  attachment.py  category.py  task.py  user.py
app/schemas/: attachment.py  category.py  task.py  user.py
app/services/: auth_service.py  category_service.py  task_service.py
tests/: conftest.py  test_auth.py  test_tasks.py
